implement the improvment request https://github.com/jenkinsci/windows-azure-storage-plugin/issues/42